Fixing new command definitions betwen Andrey and Jon. --Lindley

--- a/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
+++ b/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
@@ -70,11 +70,11 @@ vetoes to reduce muon spallation backgrounds. The backgrounds relevant to
 
 
 The 0{\nbb} signal and these backgrounds have distinctive energy spectra. Since 0{\nbb} decay produces no neutrinos, the full energy of the
-decay is contained within the detector and a peak is observed around the decay $Q$-value. This defines a clear region of interest (ROI) around the $Q$-value.  Fig.~\ref{fig:EdisAnd10C} (Left) illustrates this for the \nbb decay of XX. In 2{\nbb} decay, the neutrinos carry away some fraction of the decay energy leading to a broad spectrum from 0~MeV up to the decay $Q$-value. The interaction of \B solar neutrinos through neutrino-electron elastic scatter (ES) produces produces a spectrum that rises at low energies, producing an effectively flat background in the ROI. Finally, the \bpd-decay of $^{10}$C proceeds through a long lived excited state of \bten,  see Fig.~\ref{fig:EdisAnd10C} (Right). In a liquid scintillator detector, the full energy of the decay, positron kinetic energy, annihilation gammas, and de-excitation gammas, is detected. This results in a \bmd-decay spectrum offset from zero by the energy of the XX~MeV excited state.
+decay is contained within the detector and a peak is observed around the decay $Q$-value. This defines a clear region of interest (ROI) around the $Q$-value.  Fig.~\ref{fig:EdisAnd10C} (Left) illustrates this for the \nbb decay of XX. In 2{\nbb} decay, the neutrinos carry away some fraction of the decay energy leading to a broad spectrum from 0~MeV up to the decay $Q$-value. The interaction of \B~solar neutrinos through neutrino-electron elastic scatter (ES) produces produces a spectrum that rises at low energies, producing an effectively flat background in the ROI. Finally, the \bpd-decay of \C~proceeds through a long lived excited state of \Bten,  see Fig.~\ref{fig:EdisAnd10C} (Right). In a liquid scintillator detector, the full energy of the decay, positron kinetic energy, annihilation gammas, and de-excitation gammas, is detected. This results in a \bmd-decay spectrum offset from zero by the energy of the XX~MeV excited state.
 
-A detector with good energy resolution can statistically separate these backgrounds from the 0\nbb signal. Additional background rejection is possible with the inclusion of directional or topographical information. The two electrons emitted in 0\nbb and 2\nbb should reconstruct very differently than the single electron from ES or the positron and subsequent  gammas from the \C decay. In previous work, we have shown that photo-detectors with timing resolution of $\sim$100~ps can be used to resolve the prompt Cherenkov photons from the slower scintillation signal and the resulting distributions can be fit for the position and direction of $\sim$MeV electrons\cite{Aberle2014}. 
+A detector with good energy resolution can statistically separate these backgrounds from the 0\nbb~ signal. Additional background rejection is possible with the inclusion of directional or topographical information. The two electrons emitted in 0\nbb~ and 2\nbb~ should reconstruct very differently than the single electron from ES or the positron and subsequent  gammas from the \C~decay. In previous work, we have shown that photo-detectors with timing resolution of $\sim$100~ps can be used to resolve the prompt Cherenkov photons from the slower scintillation signal and the resulting distributions can be fit for the position and direction of $\sim$MeV electrons\cite{Aberle2014}. 
 
-In this paper, we examine in detail the time and topographical distributions of 0\nbb and these two key backgrounds. We propose a method using spherical harmonic decomposition to analyze the distribution of early photo-electrons (PE) and use this as a discriminant. In Section~\ref{sec:detector_description}, we describe the detector model we will use throughout this paper. In Section~\ref{sec:spherical_harmonics}, we introduce the spherical harmonic decomposition, and discuss the performance of this analysis in Section~\ref{sec:performance_and_challenges}.
+In this paper, we examine in detail the time and topographical distributions of 0\nbb~ and these two key backgrounds. We propose a method using spherical harmonic decomposition to analyze the distribution of early photo-electrons (PE) and use this as a discriminant. In Section~\ref{sec:detector_description}, we describe the detector model we will use throughout this paper. In Section~\ref{sec:spherical_harmonics}, we introduce the spherical harmonic decomposition, and discuss the performance of this analysis in Section~\ref{sec:performance_and_challenges}.
 
 
 
