--- a/SphericalHarmonicsPaper/NIMA/common_commands.tex
+++ b/SphericalHarmonicsPaper/NIMA/common_commands.tex
@@ -1,13 +1,11 @@
-\newcommand{\nbb}{\ensuremath{\nu\beta\beta}}
 
 
 \newcommand\JOcom[1]{{\textcolor{red}{#1}}}
 
-\newcommand{\bmd}{\beta}
-\newcommand{\bpd}{\beta^{+}}
-\newcommand{\bb}{\beta\beta}
-\newcommand{\vbb}{0\nu\beta\beta}
-\newcommand{\vvbb}{2\nu\beta\beta}
+\newcommand{\bmd}{$\beta$}
+\newcommand{\bpd}{$\beta^{+}$}
+\newcommand{\bb}{$\beta\beta$}
+\newcommand{\nbb}{\ensuremath{\nu\beta\beta}}
 \newcommand{\Te}{$^{130}$Te}
 \newcommand{\Se}{$^{82}$Se}
 \newcommand{\B}{$^{8}$B}
