--- a/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
+++ b/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
@@ -29,22 +29,22 @@
 
 \input{10-Introduction}
 
-%\input{20-LiquidScintillatorDetector}
+\input{20-LiquidScintillatorDetector}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
-%\input{25-EventTiming}
-\clearpage %These are only needed to force correct placement of the
-           %figures while there is no text
-
-%\input{30-SphericalHarmonics}
+\input{25-EventTiming}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
 
-%\input{40-Performance}
+\input{30-SphericalHarmonics}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
 
-%\input{50-Conclusions}
+\input{40-Performance}
+\clearpage %These are only needed to force correct placement of the
+           %figures while there is no text
+
+\input{50-Conclusions}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
 
