Commented 2D plots for the three topologies in Sec.4

--- a/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
+++ b/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
@@ -55,7 +55,7 @@ two special cases of an idealized 0\nbb-decay topology.
     detector. One typical event is shown for each topology.
     \emph{Bottom right pannel:} Normalized power spectrum $S_l$ calculated for distribution of cherenkov photons only. The three
     topologies are compared: two 5~MeV back-to-back electrons (\emph{solid red line}), two 5~MeV electrons at 90$^{\circ}$ angle
-    (\emph{dotted magenta line}), and a single 10~MeV electron (\emph{dashed blue line}). For each topology 1000 events were simulated. 
+    (\emph{dotted magenta line}), and a single 10~MeV electron (\emph{dashed blue line}). For each topology 100 events were simulated. 
     The normalized power values $S_l$'s were calculated for each individual event. The horizontal lines correspond to the mean values of 
     $S_l$ within each event topology. The vertical bars show one standard deviation from the mean value.}
   \label{fig:ThreeTopologies_Display_5MeV}
@@ -227,6 +227,9 @@ PE in the histogram bin corresponding to that pair.
 Coefficients $f_{lm}$ from Eq.~\ref{eq3} are calculated using a Monte Carlo integration technique. Variables $S_l$'s are calculated using 
 Eqs.\ref{eq4} - \ref{eq6}. {\bf Also need to provide reference to the libraries for Legandre polinomials.}
 
+%----------LARGE COMMENT BLOCK BEGINS-------------
+\begin{comment}
+
 \textbf{ I'm thinking of removing Figs~\ref{fig:SL_topologies_CHE}-\ref{fig:SL_topologies_all}, thus the following paragraphs are in Italic. 
 I think bottom pannels in Figs.~\ref{fig:ThreeTopologies_Display_5MeV}-\ref{fig:Te130_Display} convey enough info that it only make sense to use
 $S_0$ and $S_1$}
@@ -294,6 +297,8 @@ The effects due to the presence of scintillation light and applying the default 
 
 
 \endgroup
+\end{comment}
+%----------LARGE COMMENT BLOCK ENDS-------------
 
 
 \subsection{Spherical harmonics analysis of \C~background events}
