--- a/SphericalHarmonicsPaper/NIMA/preamble_els.tex
+++ b/SphericalHarmonicsPaper/NIMA/preamble_els.tex
@@ -43,6 +43,8 @@
 \usepackage{lineno}
 \usepackage{setspace}
 
+\usepackage{verbatim} % Added by AE for multiline comments
+
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 
 \bibliographystyle{model1-num-names}
