Commented S2 vs S3 plot. It is clear from 1D plot that S2 and S3 won't provide separation.

--- a/SphericalHarmonicsPaper/NIMA/40-Performance.tex
+++ b/SphericalHarmonicsPaper/NIMA/40-Performance.tex
@@ -61,8 +61,8 @@ account all the details of a particular experiment.
 \begin{figure*}[h]
   \centering
   \includegraphics[width=0.49\textwidth]{hS0vsS1_Te130_1el_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
-  \includegraphics[width=0.49\textwidth]{hS2vsS3_Te130_1el_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
-  \includegraphics[width=0.9\textwidth]{hS01_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
+%  \includegraphics[width=0.49\textwidth]{hS2vsS3_Te130_1el_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
+  \includegraphics[width=0.49\textwidth]{hS01_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
   \caption{Spherical harmonics comparison between $^{130}$Te 0{\nbb}
     decay signal ($Q=2.529$~MeV) (\emph{red}) and $^{8}$B solar
     neutrinos background (\emph{blue}) for 1000 simulated events
@@ -73,8 +73,9 @@ account all the details of a particular experiment.
     applied. \emph{Top left:} $S_0$ versus $S_1$ scatter plot. Black
     dotted line is a linear fit of these 2D histograms. Variable
     $S_{01}$ is defined as a projection of 2D distribution onto this
-    linear fit. \emph{Top right:} $S_2$ versus $S_3$ scatter
-    plot. \emph{Bottom:} $S_{01}$ distribution for the signal and
+    linear fit. 
+    %\emph{Top right:} $S_2$ versus $S_3$ scatter plot. 
+    \emph{Bottom:} $S_{01}$ distribution for the signal and
     background.}
 \label{fig:SL_Te_33p5ns_center}
 \end{figure*}
